home page button and conditionals fixed, overlappng category, price, submenu

--- a/wp-content/themes/marketify/style.css
+++ b/wp-content/themes/marketify/style.css
@@ -5119,6 +5119,9 @@ input.search-field-input {
 	margin-top: 10px;
 	position: relative;
 }
+.left-container .download-single-widget ul.children ul.children
+{left:200px;}
+
 .left-container .download-single-widget ul.children > li > a {
 	height: 25px;
 	display: inline-block;
